reorder code cells

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,18 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "475d1563-924e-479e-816e-1949881c8bbc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark.sql import SparkSession\n",
-    "from graphframes import *"
+    "from pyspark.sql import SparkSession"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "23be673e-735f-40ca-b9dd-a3f3fbdfb7e6",
    "metadata": {},
    "outputs": [
@@ -27,13 +26,13 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://172.23.178.160:4040\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://172.26.22.82:4040\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
        "                <dd><code>v3.2.0</code></dd>\n",
        "              <dt>Master</dt>\n",
-       "                <dd><code>local</code></dd>\n",
+       "                <dd><code>local[*]</code></dd>\n",
        "              <dt>AppName</dt>\n",
        "                <dd><code>graphframes</code></dd>\n",
        "            </dl>\n",
@@ -43,29 +42,30 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f543928ad30>"
+       "<pyspark.sql.session.SparkSession at 0x7fe301a430d0>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "spark = SparkSession.builder\\\n",
-    "    .master(\"local\")\\\n",
+    "    .master(\"local[*]\")\\\n",
     "    .appName(\"graphframes\")\\\n",
     "    .config(\"spark.jars\", \"/home/eric/src/graphframes/graphframes-0.8.2-spark3.2-s_2.12.jar\")\\\n",
+    "    .config(\"spark.driver.cores\",\"12\")\\\n",
     "    .getOrCreate()\n",
     "\n",
     "spark.sparkContext.addPyFile('/home/eric/src/graphframes/graphframes-0.8.2-spark3.2-s_2.12.jar')\n",
-    "\n",
+    "from graphframes import *\n",
     "spark"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "f9571c1f-67eb-4d61-8ebb-051c27bb1726",
    "metadata": {},
    "outputs": [],
@@ -75,16 +75,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "36fb602f-d7c9-4eb7-b78b-31b1d25c331d",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
+     "text": []
     },
     {
      "name": "stdout",
@@ -93,23 +91,10 @@
       "+---+--------+\n",
       "| id|inDegree|\n",
       "+---+--------+\n",
-      "|  c|       1|\n",
       "|  b|       2|\n",
+      "|  c|       1|\n",
       "+---+--------+\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Stage 763:==========>  (156 + 1) / 200][Stage 764:>                (0 + 0) / 1]\r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "+---+------------------+\n",
       "| id|          pagerank|\n",
       "+---+------------------+\n",
@@ -118,13 +103,6 @@
       "|  a|              0.01|\n",
       "+---+------------------+\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
      ]
     }
    ],
@@ -141,7 +119,7 @@
     "  (\"c\", \"b\", \"follow\"),\n",
     "], [\"src\", \"dst\", \"relationship\"])\n",
     "# Create a GraphFrame\n",
-    "from graphframes import *\n",
+    "\n",
     "g = GraphFrame(v, e)\n",
     "\n",
     "# Query: Get in-degree of each vertex.\n",
@@ -157,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "9e37ca66-74a2-4d41-9ed4-f726357d00be",
    "metadata": {},
    "outputs": [],
@@ -178,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "ec5b5b20-8956-479c-9154-cdc462a7218d",
    "metadata": {},
    "outputs": [
@@ -188,7 +166,7 @@
        "GraphFrame(v:[id: string, station_id: string ... 5 more fields], e:[src: string, dst: string ... 9 more fields])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,17 +178,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "04923dd2-b5a4-469f-bd2d-784a94d9f3f1",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -221,9 +192,7 @@
     {
      "name": "stderr",
      "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
+     "text": []
     },
     {
      "name": "stdout",
@@ -232,6 +201,11 @@
       "Total Number of Trips in Graph: 354152\n",
       "Total Number of Trips in Original Data: 354152\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
     }
    ],
    "source": [
